
* XINS/Java Server Framework:
  - Fixed bug. The context identifier uses now the localhost hostname
    instead of the hostname of the remote host.
    This bug has been in XINS since version 0.203.
  - Fixed SF.net bug #1042113. Function without input parameters generates
    NullPointerException. This bug has been in XINS since version 0.207.
  - Removed Dutch Logdoc translations.

* XINS/Java Common Library:
  - Cleaned up and improved Logdoc.
  - Added the possibility to use the HTTPServiceCaller without parameters.
  - Moved the URLEncoding class from the net package to the text package.
  - Added unit test classes for the IntXX type classes.
  - Removed boundary checks on all methods except the isValidValue method in
    all the IntXX type classes.
  - Added unit test class for Boolean type class.
  - Added fileFound() method to FileWatcher.Listener interface. This may
    break existing code.
  - Fixed SF.net bug #1049850 ("FileWatcher thread dies if listener throws an
    exception"). This bug has been in XINS since the introduction of the
    FileWatcher class, in XINS 0.121 (initially in the package
    org.xins.util.io).

* XINS/Java Client Framework:
  - Fixed the Javadoc for the UnsuccessfulXINSCallException.
  - Added AbstractCAPICallResult as base class for generated function call
    result classes.
  - Changed UnacceptableResultXINSCallException to accept an
    AbstractCAPICallResult instance as an alternative to a XINSCallResult
    instance. This is necessary so CAPI users can actually throw an
    UnacceptableResultXINSCallException, since they have no handle to a
    XINSCallResult instance directly.
  - If doCall(CallRequest) throws an unexpected type of exception, then an
    Error is thrown. Improved the message for that Error, and registering the
    cause of the Error properly.

* Logdoc
  - The boolean type was not declared in the log_to_entry_html.xslt as a
    logdoc type. This is now fixed.