@@ -8,6 +8,12 @@ CHANGES INTRODUCED IN XINS 0.209:
   - Fixed SF.net bug #1042113. Function without input parameters generates
     NullPointerException. This bug has been in XINS since version 0.207.
   - Removed Dutch Logdoc translations.
+  - Fixed bug #1049149. The bootstrapped message is only printed once when
+    the servlet is initialized.
+  - Changed the logdoc entry "1309" to "1233" and its message from 
+    "boostrapping" to "bootstrapped".
+  - Fixed bug #1049162. The servlet allows the state to change from READY to
+    INITIALIZING_API. This bug has been in XINS since XINS 0.207.
 
 * XINS/Java Common Library:
   - Cleaned up and improved Logdoc.
